Issue #283 - Updating divider spacing.  Updating heading implementation of divider and using this on not found component.

--- a/components/divider/divider.scss
+++ b/components/divider/divider.scss
@@ -10,6 +10,7 @@
   border-top-width: 0px;
   border-right-width: 0px;
   border-left-width: 0px;
+  margin-top: $spacer * 0.75;
   margin-bottom: $spacer * 1.25;
 }
 
